# EMBR_Simulation_Pipeline

./: .dockerignore  .env.example  .gitignore  bootstrap.sh  compose.yaml  entrypoint.sh
.github/workflows/: ignition-fortress-testing.yml
docker/: CANopen-Spec-Dockerfile  Dockerfile  Gazebo-Dockerfile  canopen-entrypoint.sh  embr_docker_docs.md
documentation/: architecture.md  canopen_simulation.md  workflow.md
embr_sim/ros2_ws/src/embr_canopen_sim/: package.xml
embr_sim/ros2_ws/src/embr_description/: CMakeLists.txt  package.xml
embr_sim/ros2_ws/src/embr_description/launch/: view_maxon_motor.launch.py
embr_sim/ros2_ws/src/embr_description/meshes/maxon_motor/meshes/: Body.stl  Shaft.stl  Tab_1.stl  Tab_2.stl
embr_sim/ros2_ws/src/embr_description/rviz/: maxon_motor.rviz
embr_sim/ros2_ws/src/embr_description/urdf/maxon_motor/urdf/: maxon_motor.urdf.xacro
ros2_ws/src/: .gitkeep
scripts/: Linux_Setup.sh
scripts/Documentation/: OS_Linux.md
scripts/environment/: bootstrap_linux.sh  info_helpers.sh  logo.sh  setup_docker.sh  status_gazebo_fortress.sh
