<?xml version="1.0"?>
<package format="3">
  <name>embr_canopen_sim</name>
  <version>0.0.1</version>
  <description>CANopen motor simulation for EMBR.</description>

  <maintainer email="your-email@example.com">Maison Gulyas</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
